[package]
name = "octree"
version = "0.1.0"
authors = ["Lyon Beckers <lyonbeckers@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

aabb = { git = "https://github.com/lyonbeckers/rs-aabb" }
crossbeam-channel = "0.5"
nalgebra = { version = "0.32", features = ["serde-serialize"] }
num = "0.4"
parking_lot = { version = "0.12", features = ["serde"] }
rand = "0.8"
rayon = "1.7"
serde = { version = "1.0", features = ["rc"] }
serde_derive = "1.0"
thiserror = "1.0"
tracing = "0.1"

[dev-dependencies]
tracing-subscriber = "0.2"
ron = "0.6"
